# code-deployer

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .semgrepignore  .semgreprc  Dockerfile.test  custom-security-rules.yml  diagram_arch.mermaid  pyproject.toml  pytest.ini  requirements.txt
Documentation/: BoM.md  vulnerability-tracking.md
ci/: build.yml  cache.yml  code-quality.yml  coverage.yml  deploy.yml  network.yml  quality-gate.yml  quality_gate.yml  report.yml  security.yml  stop.yml  test.yml  variables.yml
local/: docker-compose.yml
local/grafana/: docker-compose.yml
local/grafana/config/datasources/: mysql.yml
local/grafana/dashboards/: keypool-logs-dashboard.json  ogs-dashboard.json
local/log_processor/: Dockerfile  app.py  config.py  requirements.txt
local/log_processor/processors/: base_processor.py  ogs_processor.py
local/mysql/: docker-compose.yml
local/mysql/init/: 01-schema.sql
remote/: docker-compose.yml
remote/log_collector/: Dockerfile  app.py  config.py  requirements.txt
remote/ogs_data_generator/: Dockerfile
scripts/: cpe_assets.py  run-comprehensive-tests.sh  run-pylint.sh  run-semgrep.sh  run-tests.sh
scripts/notifications/: notification_manager.py
scripts/quality/: checker.py  google_style_validator.py
scripts/security/: scanner.py
sim/: log_generator.py
src/: example.py
src/examples/: bad_example.py  example.py
src/local/grafana/: docker-compose.yml
src/local/grafana/config/datasources/: mysql.yml
src/local/grafana/dashboards/: dashboard.yml  keypool-logs-dashboard.json  ogs-dashboard.json
src/local/log_processor/: Dockerfile  app.py  config.py  config.py.bak  database.py  docker-compose.yml  downloader.py  parser.py  requirements.txt
src/local/log_processor/processors/:  __init__.py  base_processor.py  keypool_processor.py  ogs_processor.py
src/local/mysql/: Dockerfile  docker-compose.yml
src/local/mysql/init/: 01-schema.sql
src/remote/: docker-compose.yml
src/remote/log_collector/: Dockerfile  app.py  config.py  http_server.py  log_generator.py  ogs_data_generator.py  requirements.txt
src/remote/ogs_data_generator/: Dockerfile  app.py  config.py
tests/: conftest.py  test_example.py
tests/integration/:  test_log_processor_workflow.py  test_example_integration.py  test_log_processor_integration.py
tests/unit/: test_database.py  test_downloader.py  test_example_unit.py  test_parser.py
