[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-style-guide-project"
version = "1.0.0"
description = "Project implementing Google Style Guide with comprehensive testing, coverage and security analysis"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["python", "google-style-guide", "testing", "coverage", "pylint", "security", "semgrep"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]

dependencies = [
    # Testing and coverage
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "coverage[toml]>=7.3.0",
    # Code quality and linting
    "pylint>=3.3.8",
    "pylint-google-style-guide-imports-enforcing>=1.3.1",
    # Security analysis tools
    "semgrep>=1.132.0",
    "bandit>=1.7.5",
    "safety>=2.3.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pydocstyle>=6.3.0",
]
test = [
    "pytest-html>=3.2.0",
    "pytest-json-report>=1.5.0",
    "pytest-xvs>=3.0.0",
    "pytest-mock>=3.11.1",
    "pytest-benchmark>=4.0.0",
    "pytest-watch>=4.2.0",
    "pytest-pylint>=0.19.0",
]
security = [
    "semgrep>=1.132.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
    "pip-audit>=2.6.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
all = [
    "google-style-guide-project[dev,test,security,docs]",
]

[project.urls]
Homepage = "https://github.com/yourusername/google-style-guide-project"
Documentation = "https://github.com/yourusername/google-style-guide-project#readme"
Repository = "https://github.com/yourusername/google-style-guide-project.git"
"Bug Tracker" = "https://github.com/yourusername/google-style-guide-project/issues"

[project.scripts]
run-tests = "scripts.run_tests:main"
run-security = "scripts.run_security:main"

# ===== Tool Configurations =====

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md", "*.yml", "*.yaml"]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/settings/*",
    "setup.py",
    "manage.py",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
show_missing = true
skip_covered = false
precision = 2
fail_under = 80

[tool.coverage.html]
directory = "reports/coverage/html"
title = "Coverage Report"

[tool.coverage.xml]
output = "reports/coverage/coverage.xml"

[tool.coverage.json]
output = "reports/coverage/coverage.json"

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--cov=src",
    "--cov-branch",
    "--cov-report=html:reports/coverage/html",
    "--cov-report=xml:reports/coverage/coverage.xml",
    "--cov-report=json:reports/coverage/coverage.json",
    "--cov-report=term-missing",
    "--cov-fail-under=80",
    "--html=reports/tests/pytest-report.html",
    "--self-contained-html",
    "--json-report",
    "--json-report-file=reports/tests/pytest-report.json",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests", 
    "slow: Slow running tests",
    "skip_coverage: Skip coverage for this test",
    "benchmark: Benchmark tests",
    "security: Security-related tests",
]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Black configuration
[tool.black]
line-length = 80
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''

# isort configuration  
[tool.isort]
profile = "black"
line_length = 80
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
src_paths = ["src", "tests"]
skip_glob = ["*/migrations/*"]

# MyPy configuration
[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Pylint configuration (complement to .pylintrc)
[tool.pylint.main]
load-plugins = ["pylint_google_style_guide_imports_enforcing"]
ignore-paths = ["tests/fixtures", "migrations"]

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "invalid-name",
    "line-too-long",  # Handled by black
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-locals",
    "duplicate-code",
]

[tool.pylint.format]
max-line-length = 80

[tool.pylint.design]
max-args = 8
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-parents = 7
max-attributes = 20
max-public-methods = 20
max-bool-expr = 5

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = true
ignore-docstrings = true

# Pydocstyle configuration
[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D104", "D105", "D107"]
match_dir = "^(?!tests).*"

# Bandit security configuration
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", "venv", ".venv"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection for specific cases

[tool.bandit.assert_used]
skips = ["*_test.py", "**/test_*.py"]

# Security-related tool configurations

# Additional tool configurations
[tool.autopep8]
max_line_length = 80
aggressive = 1

[tool.flake8]
max-line-length = 80
exclude = [".git", "__pycache__", "venv", ".venv", "migrations"]
ignore = [
    "E203",  # whitespace before ':'
    "W503",  # line break before binary operator
    "E501",  # line too long (handled by black)
]

# Performance and benchmarking
[tool.pytest-benchmark]
only_benchmarks = true
sort = "mean"
compare_fail = ["mean:10%", "stddev:10%"]
histogram = true

# Documentation configuration
[tool.sphinx]
source-dir = "docs/source"
build-dir = "docs/build"

# Development environment
[tool.pip-tools]
generate-hashes = true
upgrade = true

[tool.setuptools_scm]
write_to = "src/_version.py"

# IDE and editor configuration hints
[tool.pyright]
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__"]
venvPath = "."
venv = "venv"
pythonVersion = "3.8"
pythonPlatform = "Linux"
typeCheckingMode = "basic"